[project]
name = "nis-export-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "sqlalchemy",
    "psycopg2-binary",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
