[project]
name = "nis-export-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv>=1.2.2",
]
[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest",
    "ruff",
    "mypy",
]
