[project]
name = "data-catalogue-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv>=1.2.2",
]
[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff.lint.per-file-ignores]
"src/migrations/env.py" = ["E402"] # load_dotenv before importing infrastructure.session

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
